--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     border-bottom-right-radius: 20px;
     color: white;
     padding-left: 4%;
-    padding-top: 9%;
+    padding-top: 11%;
 }
 
 .caps span:hover {
@@ -79,7 +79,7 @@ body {
     color: white;
     width: 70px;
     padding-left: 9%;
-    padding-top: 9%;
+    padding-top: 11%;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
@@ -167,9 +167,11 @@ button svg{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #1045FF;
-    margin-top: 10%;
+    margin-top: 2%;
+    margin-bottom: 10%;
+    margin-left: 33%;
     height: 80px;
+    width: 30%;
 }
 
 .footer div{
@@ -203,29 +205,285 @@ button svg{
 }
 
 
-#s1{
-    background-color: white;
-    border-radius: 20px;
-    width: 65px;
-    height: 40px;
-    margin-right: 5%;
-}
 
-#s2{
-    background-color: white;
-    border-radius: 20px;
-    width: 60px;
-    padding-left: 3%;
+
+.button4 {
+    width: 50px;
     height: 50px;
-    margin-right: 5%;
-}
+    border-radius: 50%;
+    background-color: #324870;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  #x {
+    /* width: 12px; */
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .button4:hover {
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color:#1045FF;
+    align-items: center;
+  }
+  
+  .button4:hover .svgIcon {
+    width: 50px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .button4::before {
+    position: absolute;
+    top: -1px;
+    content: "x";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .button4:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    transform: translateY(30px);
+    transition-duration: .3s;
+  }
 
 
-#s3{
-    background-color: white;
-    border-radius: 20px;
-    width: 55px;
-    height: 40px;
-    padding: 3%;
-    margin-right: 5%;
-}
+  .button3 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #324870;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  #s3 {
+    /* width: 12px; */
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .button3:hover {
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color:#1045FF;
+    align-items: center;
+  }
+  
+  .button3:hover .svgIcon {
+    width: 50px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .button3::before {
+    position: absolute;
+    top: -1px;
+    content: "website";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .button3:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    transform: translateY(30px);
+    transition-duration: .3s;
+  }
+
+
+  .button2 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color:#324870;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  #s2 {
+    /* width: 12px; */
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .button2:hover {
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color:#1045FF;
+    align-items: center;
+  }
+  
+  .button2:hover .svgIcon {
+    width: 50px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .button2::before {
+    position: absolute;
+    top: -1px;
+    content: "Instagram";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .button2:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    transform: translateY(30px);
+    transition-duration: .3s;
+  }
+  
+  
+  .button1 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color:#324870;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  #s1 {
+    /* width: 12px; */
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .button1:hover {
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color:#1045FF;
+    align-items: center;
+  }
+  
+  .button1:hover .svgIcon {
+    width: 50px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .button1::before {
+    position: absolute;
+    top: -1px;
+    content: "Facebook";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .button1:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    transform: translateY(30px);
+    transition-duration: .3s;
+  }
+
+
+  @media (max-width:375px){
+    .header{
+        margin-left:260px;
+    }
+
+    .mulit{
+        width: 730px;
+    }
+
+    #pro{
+        width: 720px;
+    }
+
+    .pro h1{
+        font-size: 40px;
+        width: 700px;
+        margin-top: 120%;
+        margin-left: 4%;
+        margin-bottom: 60%;
+    }
+
+    .container-space2{
+        margin-left: 30%;
+    }
+
+    .caps{
+        margin-top: 10%;
+    }
+
+    .content h1{
+        width: 700px;
+        margin-left: 2%;
+        margin-top: 8%;
+    }
+
+    .list{
+        width: 700px;
+        margin-left:3.5%;
+    }
+
+    .list h2{
+        font-size: 24px;
+    }
+
+    .contact{
+        width: 600px;
+    }
+
+    .footer{
+        width: 500px;
+    }
+  }
