--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
   scroll-behavior: smooth;
   font-family: 'Inter', sans-serif;
-  overflow: scroll;
 }
 
 .header {
@@ -403,7 +402,7 @@ button svg {
 }
 
 
-@media (max-width:375px) {
+/* @media (max-width:375px) {
   .header {
     margin-left: 90px;
   }
@@ -478,7 +477,7 @@ button svg {
     width: 300px;
     margin-left: 14%;
   }
-}
+} */
 
 @media (max-width:430px) {
   .header {
@@ -527,7 +526,6 @@ button svg {
   .list {
     width: 425px;
     margin-left: 0%;
-    overflow: scroll;
   }
 
   .list h2 {
